--- a/west.yml
+++ b/west.yml
@@ -124,7 +124,7 @@ manifest:
     - name: tfm-mcuboot # This is used by the trusted-firmware-m module.
       repo-path: sdk-mcuboot
       path: modules/tee/tfm-mcuboot
-      revision: v1.7.2-ncs2
+      revision: 4aa516e7281fc6f9a2dce0b0efda9acc580fa254
     - name: matter
       repo-path: sdk-connectedhomeip
       path: modules/lib/matter
