commnt: adapt param change
Signed-off-by: Sebastian Wezel <sebastian.wezel@nordicsemi.no>

--- a/.github/workflows/comment-test.yml
+++ b/.github/workflows/comment-test.yml
@@ -15,6 +15,6 @@ jobs:
         uses: datgizmo/action-comment@main
         with:
           github-token: ${{ secrets.MY_GITHUB_TOKEN }}
-          messages: |
-                    This is a test comment @ ${{ steps.date.outputs.date }}
+          message: |
+                   This is a test comment @ ${{ steps.date.outputs.date }}
           note: "Test update note"
