--- a/.github/workflows/pip-requirements.yml
+++ b/.github/workflows/pip-requirements.yml
@@ -44,9 +44,7 @@ jobs:
           west update --narrow mcuboot zephyr
 
       - name: Execute script diff action
-        uses: nordicbuilder/action-script-diff@v0.1
-        env:
-          PR: ${{ github.event.pull_request.number }}
+        uses: nordicbuilder/action-script-diff@main
         with:
           github-token: ${{ secrets.NCS_GITHUB_TOKEN }}
           message_diff: |
@@ -71,7 +69,7 @@ jobs:
           git_user_name: "Nordic Builder"
           git_user_email: "pylon@nordicsemi.no"
           script_call: |
-            printenv
+            echo "PR: ${{ github.event.pull_request.number }}"
             OUT_FILE="nrf/scripts/requirements-fixed.txt"
             echo "Writing frozen requirements to: $OUT_FILE"
             echo "Log python version: $(python --version)"
